fix: align content on panda translation page

--- a/online-zoo/pages/zoos-translation/panda/panda.css
+++ b/online-zoo/pages/zoos-translation/panda/panda.css
@@ -868,7 +868,7 @@ li {
     border-radius: 5px;
   }
   .slider {
-    width: 69.25vw;
+    width: 831px;
     height: 302px;
     margin: 50px 0 81px 74px;
   }
@@ -1475,7 +1475,7 @@ li {
     width: 100%;
     height: 34vw;
     row-gap: 0;
-    column-gap: 20px;
+    column-gap: 6.25vw;
     margin-top: 22px;
     margin-bottom: 0;
   }
